- Wrong statements in the manual (things might have changed and the manual becomes outdated sometimes)
- Any exceptions or error in the log. Warnings might be interesting, but probably not urgent
----------------------------------------------------------------

VERSIONS

Version 7.3.85 (28.06.2023)
- ADDED: Character image on the menu button for character info when logged on

Version 7.3.84 (27.06.2023)
- ADDED: A movement handle on the left side (red), which always allows movement of the window
- ADDED: Threading to file downloads
- FIXED: An issue with error messages can not be closed sometimes
- FIXED: Error while saving gamestats (attackerLostTonnage cannot be null, has not been initialized)
- FIXED: Rounding error in date calculation (server and client)
- CHANGED: Added Button to Veto a map (once in a drop per side)

Version 7.3.79 (24.06.2023)
- CHANGED: Season RESET
- CHANGED: The logging gui inside the client (Removed tableview in client, removed server log)
- CHANGED: Diplomacy store functionality finished

Version 7.3.76 (22.06.2023)
- UPDATED: Discord API / several maven plugin versions
- FIXED: Error in IRC-Client when no user is selected
- FIXED: NPE in diplomacy before init
- CHANGED: Diplomacy pane behaviour completed
- CHANGED: A number of dependency versions to variables
- STARTED: Diplomacy store functionality

Version 7.3.70 (20.06.2023)
- FIXED: Error while registering a new user

Version 7.3.67 (20.06.2023)
- UPDATED: Diplomacy pane
- CHANGED: Ulric (Discord) now lists all users with faction leader role (for information and contact purposes)

Version 7.3.66 (19.06.2023)
- UPDATED: Libraries
- UPDATED: Diplomacy pane
- UPDATED: Ulric only posts overview every 24h

Version 7.3.65 (27.05.2023)
- ADDED: Tables for diplomacy data
- ADDED: Diplomacy pane
- ADDED: Check while jumping if target is allied, so no attack will be created

Version 7.3.62 (26.05.2023)
- ADDED: Several starsystems, CNC, CSV
- PREPARED: Diplomacy

Version 7.3.61 (22.05.2023)