@@ -98,6 +98,7 @@ public enum ACTIONS {
 	SHOW_MESSAGE_WAS_ANSWERED,
 	START_ROLEPLAY,
 	UPDATE_GAME_INFO,
+	UPDATE_ALLIANCES_LIST,
 	UPDATE_ROUND_COUNTDOWN,
 	OPEN_MANUAL,
 	OPEN_ATTACKTHREAT,
