@@ -125,6 +125,7 @@ general_user_is_active_checkbox=User ist aktiviert
 general_user_is_in_registration=User wurde registriert, ein Admin muss noch freischalten!
 general_user_registration_username_error=Der Username wird bereits verwendet!
 general_user_registration_usermail_error=Die EMail wird bereits verwendet!
+general_alliances=Allianzen
 
 AdminSecurityTabUser=Benutzer
 AdminSecurityTabCharacter=Character
