@@ -125,6 +125,7 @@ general_user_is_active_checkbox=User is activated
 general_user_is_in_registration=User is in registration, an admin needs to confirm the account!
 general_user_registration_username_error=Username is already in use!
 general_user_registration_usermail_error=Mail is already in use!
+general_alliances=Alliances
 
 AdminSecurityTabUser=User
 AdminSecurityTabCharacter=Character
