@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -33,7 +34,7 @@
             <Button fx:id="mapButton03" alignment="CENTER_RIGHT" layoutX="666.0" layoutY="428.0" mnemonicParsing="false" onAction="#handleCenterHomeworldButtonClick" prefHeight="37.0" prefWidth="105.0" styleClass="contentButton" stylesheets="@../styles/MainFrameStyle.css" text="Homeworld" />
             <ImageView fx:id="ivForbidden" fitHeight="68.0" fitWidth="86.0" layoutX="31.0" layoutY="326.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
-                  <Image url="@../images/map/forbidden.png" />
+                  <Image url="@../images/map/forbidden0.png" />
                </image>
             </ImageView>
             <AnchorPane fx:id="paneAttackDetail" layoutX="6.0" layoutY="297.0" mouseTransparent="true" prefHeight="110.0" prefWidth="763.0" styleClass="systemDetailPanelSolid" stylesheets="@../styles/MainFrameStyle.css">
@@ -97,11 +98,13 @@
                         <TextField fx:id="taAttackDescription" editable="false" focusTraversable="false" prefHeight="40.0" prefWidth="743.0" styleClass="text-area" stylesheets="@../styles/MainFrameStyle.css" VBox.vgrow="ALWAYS">
                            <VBox.margin>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </VBox.margin></TextField>
+                           </VBox.margin>
+                        </TextField>
                      </children>
                   </VBox>
                </children>
             </AnchorPane>
+            <TextArea fx:id="taAlliances" focusTraversable="false" layoutX="1.0" layoutY="33.0" mouseTransparent="true" prefHeight="244.0" prefWidth="490.0" styleClass="contentTextAreaEmpty" stylesheets="@../styles/MainFrameStyle.css" />
          </children></Pane>
       <Pane fx:id="paneSystemDetail" layoutX="683.0" layoutY="22.0" mouseTransparent="true" prefHeight="253.0" prefWidth="149.0" styleClass="systemDetailPanelSolid" stylesheets="@../styles/MainFrameStyle.css">
          <children>
