@@ -283,7 +283,7 @@ public class GameServer {
 
                 Timer sendInformationToBotsTimer = new Timer();
                 SendInformationToBotsTimerTask sendInformationToBotsTimerTask = new SendInformationToBotsTimerTask();
-                sendInformationToBotsTimer.schedule(sendInformationToBotsTimerTask, 15000, 24 * 60 * 60_000);
+                sendInformationToBotsTimer.schedule(sendInformationToBotsTimerTask, 15000, 12 * 60 * 60_000);
 
                 String t_de = "Changelog: <https://www.clanwolf.net/apps/C3/changelog.txt> (nur en)\r\nHandbuch: <https://www.clanwolf.net/apps/C3/C3_Manual_de.pdf> (nur de)\r\nDownload: <https://www.clanwolf.net/viewpage.php?page_id=1>";
                 String t_en = "Changelog: <https://www.clanwolf.net/apps/C3/changelog.txt> (en only)\r\nManual: <https://www.clanwolf.net/apps/C3/C3_Manual_de.pdf> (de only)\r\nDownload: <https://www.clanwolf.net/viewpage.php?page_id=1>";
