@@ -48,6 +48,7 @@ VERSIONS
 
 Version 7.3.85 (28.06.2023)
 - ADDED: Character image on the menu button for character info when logged on
+- ADDED: A list of alliances on the map (top-left corner)
 
 Version 7.3.84 (27.06.2023)
 - ADDED: A movement handle on the left side (red), which always allows movement of the window
